--- a/about.html
+++ b/about.html
@@ -9,6 +9,17 @@
   <meta property="og:title" content="NeoIn - About" />
   <meta property="og:description" content="Who we are."/>
   <meta property="og:image" content="logos/roundel-slogan.png"/>
+  <style>
+    #linkedin {
+      width: 300px;
+      transition: all 0.2s;
+    }
+
+    #linkedin:hover {
+      width: 320px;
+      transition: all 0.2s;
+    }
+  </style>
 </head>
 
 <body>
@@ -33,6 +44,9 @@
   </script>
   <h1>About</h1>
   <h3 style="width: 80vw; margin: auto;">Unofficially founded in 2020, NeoIn does, well, a bit too much. From internet media to rocketry, automotive conceptual design, and game development, we've dabbled in way too many industries. If you actually do want to learn more, just visit one of our divisional sites instead. You're not going to find much from this webpage.</h3>
+  <br></br>
+  <h3>But anyways, here's our LinkedIn.</h3>
+  <a href="https://www.linkedin.com/company/neoin-group/"><img src="https://cdn.icon-icons.com/icons2/2530/PNG/512/linkedin_button_icon_151847.png" id="linkedin"/></a>
   <footer>© The NeoIn Group</footer>
 </body>
 
